# crewai-albeorla

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  tools.py
config/: crew.json
